# orchestration_csi

./: .gitignore  .travis.yml  README.md  galaxy.yml  pyproject.toml  requirements-standalone.yml  tox.ini
.github/workflows/: molecule.yml
defaults/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml
molecule/default/tests/: test_master.py
molecule/kvm/: converge.yml  molecule.yml  prepare.yml
molecule/parallels/: converge.yml  molecule.yml  prepare.yml
tasks/: csi-volume.yml  main.yml  mountpoint.yml  nfs-mountpoint.yml  nfs-provisioner.yml  requirements.yml
templates/: hostpath-csi.yml.j2  nfs-subdir-values.yml.j2
vars/: main.yml
